php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #36909 ld: Undefined symbols: _lchown
Submitted: 2006-03-29 12:42 UTC Modified: 2006-04-10 11:56 UTC
From: alain dot russell at blackpepper dot co dot nz Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.1.3RC2 OS: Mac OS X
Private report: No CVE-ID: None
 [2006-03-29 12:42 UTC] alain dot russell at blackpepper dot co dot nz
Description:
------------
Compile Fails with php 5.1.3 - works fine v5.1.2

Expected result:
----------------
PHP Compiles

Actual result:
--------------
Error as follows:

ld: warning multiple definitions of symbol _pcre_freeext/
pcre/pcrelib/pcre_globals.o definition of _pcre_free in 
section (__DATA,__data)/usr/local/apache2/bin/httpd 
definition of _pcre_freeld: warning multiple definitions of 
symbol _pcre_mallocext/pcre/pcrelib/pcre_globals.o 
definition of _pcre_malloc in section (__DATA,__data)/usr/
local/apache2/bin/httpd definition of _pcre_mallocld: 
warning multiple definitions of symbol _regcomp/usr/local/
apache2/bin/httpd definition of _regcomp/usr/lib/
libpthread.dylib(regcomp.So) definition of _regcompld: 
warning multiple definitions of symbol _regerror/usr/local/
apache2/bin/httpd definition of _regerror/usr/lib/
libpthread.dylib(regerror.So) definition of _regerrorld: 
warning multiple definitions of symbol _regexec/usr/local/
apache2/bin/httpd definition of _regexec/usr/lib/
libpthread.dylib(regexec.So) definition of _regexecld: 
warning multiple definitions of symbol _regfree/usr/local/
apache2/bin/httpd definition of _regfree/usr/lib/
libpthread.dylib(regfree.So) definition of _regfreeld: 
Undefined symbols:_lchownmake: *** [libs/libphp5.bundle] 
Error 1

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-03-29 13:53 UTC] alain dot russell at blackpepper dot co dot nz
really .. last line .. Either way the make still failed ?

ld: Undefined symbols:
_lchown
 [2006-04-10 11:56 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 23 03:00:01 2026 UTC