- Fixed bug #36909 (ld: Undefined symbols: _lchown)